--- a/examples/hello-world-local/gobblefile.yml
+++ b/examples/hello-world-local/gobblefile.yml
@@ -3,5 +3,8 @@ meta:
 hosts:
   all:
     - ssh_target: 127.0.0.1
+global:
+  vars:
+    hello_world_extra: :)
 include_plays_before:
   - source: http://127.0.0.1:8000/library/sikalabs/hello-world/hello-world.gobbleplay.yml
